# aws-builders-fair-projects

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
reinvent-2019/: README.md
reinvent-2019/RhythmCloud/: README.md
reinvent-2019/RhythmCloud/cloudformation/: elasticsearch.yml
reinvent-2019/RhythmCloud/lambda/: README.md
reinvent-2019/RhythmCloud/pi/: BasicBeat1.yaml  BasicBeat2.yaml  midiplay.py  respondToHitCloud.py
reinvent-2019/RhythmCloud/web/: uploadSong.html
reinvent-2019/ai-ml-blackjack-challenge/: README.md
reinvent-2019/automatic-anomaly-detection-tool/: .gitignore  README.md  demo_CFn.yml
reinvent-2019/automatic-anomaly-detection-tool/Arduino/: arduino_robot.ino
reinvent-2019/automatic-anomaly-detection-tool/Greengrass/: greengrass.service.txt
reinvent-2019/automatic-anomaly-detection-tool/LambdaFunction/: lambda_function.py  railController.py  streamServer.py  synset.txt
reinvent-2019/automatic-anomaly-detection-tool/RailController/: appconfig_template.json  main.py  railcontroller.service.txt
reinvent-2019/automatic-anomaly-detection-tool/RobotController/: appconfig_template.json  main.py  robotcontroller.service.txt
reinvent-2019/automatic-anomaly-detection-tool/flow_chart/: sushi-chart.pu
reinvent-2019/autoponics/thing-app/: .gitignore  README.md  app.py  config.ini.sample  requirements.txt
reinvent-2019/connected-photo-booth/: INSTALL.md  README.md
reinvent-2019/connected-photo-booth/cerebro_control_panel/: index.html
reinvent-2019/connected-photo-booth/iot-certs/: Cerebro-Ronan.cert.pem  Cerebro-Ronan.private.key  Cerebro-Ronan.public.key
reinvent-2019/connected-photo-booth/lambda_code/: Cerebro_GetImages_S3List.py  Cerebro_GetQRCode.py  Cerebro_ProcessFileMetadata.py  Cerebro_ProcessImage.py
reinvent-2019/connected-photo-booth/py_client/: apply_image_effects.py  aws_utils.py  button_utils.py  cerebro.config  cerebro.config.backup  cerebro.db  cerebro.ssm_config  cerebro_cleanup.py  cerebro_processor.py  cerebro_requester.py  cerebro_test_camera_led.py  cerebro_utils.py  config.py  ddl.sql  event_handlers.py  generate_audio.py  media_uploader.py  requirements.txt  rpi_utils.py  s3_manifest.txt  selfie_with_filters.py  ssm_helper.py  take_photo.py
reinvent-2019/connected-photo-booth/scripts/: cerebro_clean_start.sh  cerebro_quick_start.sh  cerebro_test_hardware.sh  crontab_script.sh  shutoff-display.sh  start-picture-frame.sh  stop-picture-frame.sh  stop-slideshow-only.sh  turnon-display.sh
reinvent-2019/deeppens/: README.md
reinvent-2019/deeppens/backend/: .gitignore  README.md  buildspec-deploy.yml  buildspec.yml  cdk.json  package-lock.json  package.json  tslint.json
reinvent-2019/doodlechallenge/: .graphqlconfig.yml  README.md  package-lock.json  package.json
reinvent-2019/drone-zone/: .gitignore  README.md  drone-zone-sysinit.sh  ground-control.py  requirements.txt
reinvent-2019/fully-automated-farm/: BOM.md  README.md  runbook.md
reinvent-2019/iot-hotdesks/: README.md
reinvent-2019/iot-racing-ninja/: README.md
reinvent-2019/learn-languages-ai-ml/: README.md
reinvent-2019/lego-ev3-raspberry-pi-robot/: README.MD
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/robot_ws/src/object_tracker_robot/: CMakeLists.txt  package.xml
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/robot_ws/src/object_tracker_robot/config/: model_config.yaml
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/robot_ws/src/object_tracker_robot/launch/: main.launch
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/robot_ws/src/object_tracker_robot/scripts/: download_model.py  run_turtlebot_controller.sh
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/object_tracker_simulation/: CMakeLists.txt  package.xml
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/object_tracker_simulation/launch/: create_world.launch  distributed_training.launch  evaluation.launch  local_training.launch
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/object_tracker_simulation/scripts/: run_evaluation_rl_agent.sh  run_local_rl_agent.sh
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/object_tracker_simulation/worlds/: empty.world
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/turtlebot3_description_reduced_mesh/: CMakeLists.txt  package.xml
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/turtlebot3_description_reduced_mesh/launch/: spawn_turtlebot.launch
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/turtlebot3_description_reduced_mesh/meshes/bases/: burger_base_decimated.stl  waffle_pi_base_reduced.stl
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/turtlebot3_description_reduced_mesh/meshes/wheels/: left_tire_reduced.stl  right_tire_reduced.stl
reinvent-2019/lego-ev3-raspberry-pi-robot/robomaker/simulation_ws/src/turtlebot3_description_reduced_mesh/urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_burger_for_autorace.urdf.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator.urdf.xacro
reinvent-2019/polyglot-bot/: LICENSE  README.md
reinvent-2019/puente/: README.md
reinvent-2019/rhythm-cloud/: README.md
reinvent-2019/sign-and-speak/: README.md
reinvent-2019/skittle-sorter/: README.md
reinvent-2019/smart-garage/: LICENSE  README.md  env-sample  package-lock.json  package.json  requirements.txt  template.yaml
reinvent-2019/smart-garden/: AlexaSmartGarden.py  LexSmartGarden.py  PublishWaterRelease-IoTButtonTrigger.py  README.md
reinvent-2019/soccer-bots/: README.md
reinvent-2019/sports-scoring-using-machine-learning/: README.md
reinvent-2019/walking-robot/: README.md
reinvent-2020/: README.md
reinvent-2020/RhythmCloud/: README.md
reinvent-2020/aws-smart-recycle/: .gitignore  README.md
reinvent-2020/rock-a-bye-baby/: README.md
sample-event/: README.md
sample-event/sample-project/: README.md
(+785 files in other folders)
